posiGen_FullsendBox/src/objects/Issue_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Case_Comment_Id__c</fullName>
        <label>Case Comment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Issue Comments</relationshipLabel>
        <relationshipName>Issue_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Issue Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>Issue Comment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>